[gd_scene load_steps=11 format=3 uid="uid://610aw1lnrbd1"]

[ext_resource type="Script" path="res://Assets/UI/Scripts/RC_Settings.gd" id="1_61sfk"]
[ext_resource type="Theme" uid="uid://ckeyukbkgh472" path="res://Assets/UI/Themes/rc_theme_volumeButton.tres" id="2_hjmjl"]
[ext_resource type="FontFile" uid="uid://dmr10v1c54tq4" path="res://Assets/Fonts/Nihonium113.ttf" id="3_ka14g"]
[ext_resource type="Texture2D" uid="uid://batwh5sgr6h78" path="res://Assets/UI/Sprites/RC_Music-On.png" id="4_ngn5c"]
[ext_resource type="Texture2D" uid="uid://cvehnyhi4v7gu" path="res://Assets/UI/Sprites/RC_ButtonHighlight.png" id="5_d0o1o"]
[ext_resource type="Texture2D" uid="uid://cgtfma3sf84af" path="res://Assets/UI/Sprites/RC_SFX-On.png" id="6_grh3n"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3qkuw"]
bg_color = Color(0.988235, 0.956863, 0, 0.627451)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.988235, 0.956863, 0, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ttmxr"]
bg_color = Color(0.243137, 0.243137, 0.243137, 0.784314)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.243137, 0.243137, 0.243137, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qorl0"]
bg_color = Color(0, 0, 0, 0.745098)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.505882, 0.505882, 0.505882, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="Theme" id="Theme_7571v"]
Button/colors/font_color = Color(0.875, 0.875, 0.875, 1)
Button/colors/font_hover_color = Color(0.95, 0.95, 0.95, 1)
Button/colors/font_pressed_color = Color(0.505882, 0.505882, 0.505882, 1)
Button/fonts/font = ExtResource("3_ka14g")
Button/styles/hover = SubResource("StyleBoxFlat_3qkuw")
Button/styles/normal = SubResource("StyleBoxFlat_ttmxr")
Button/styles/pressed = SubResource("StyleBoxFlat_qorl0")
Label/fonts/font = ExtResource("3_ka14g")

[node name="Settings" type="VBoxContainer"]
custom_minimum_size = Vector2(134, 0)
offset_left = 700.0
offset_top = 328.0
offset_right = 834.0
offset_bottom = 462.0
theme_override_constants/separation = 8
alignment = 2
script = ExtResource("1_61sfk")

[node name="VolumeAdjust" type="Panel" parent="."]
visible = false
custom_minimum_size = Vector2(0, 32)
layout_mode = 2

[node name="AdjustmentContainer" type="HBoxContainer" parent="VolumeAdjust"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 5
alignment = 1

[node name="Adjustment0" type="ColorRect" parent="VolumeAdjust/AdjustmentContainer"]
custom_minimum_size = Vector2(16, 0)
layout_mode = 2
color = Color(0, 0, 0, 1)

[node name="Button" type="Button" parent="VolumeAdjust/AdjustmentContainer/Adjustment0"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
theme = ExtResource("2_hjmjl")
theme_override_font_sizes/font_size = 24

[node name="Adjustment1" type="ColorRect" parent="VolumeAdjust/AdjustmentContainer"]
custom_minimum_size = Vector2(16, 0)
layout_mode = 2
color = Color(0, 0, 0, 1)

[node name="Button" type="Button" parent="VolumeAdjust/AdjustmentContainer/Adjustment1"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
theme = ExtResource("2_hjmjl")
theme_override_font_sizes/font_size = 24

[node name="Adjustment2" type="ColorRect" parent="VolumeAdjust/AdjustmentContainer"]
custom_minimum_size = Vector2(16, 0)
layout_mode = 2
color = Color(0, 0, 0, 1)

[node name="Button" type="Button" parent="VolumeAdjust/AdjustmentContainer/Adjustment2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
theme = ExtResource("2_hjmjl")
theme_override_font_sizes/font_size = 24

[node name="Adjustment3" type="ColorRect" parent="VolumeAdjust/AdjustmentContainer"]
custom_minimum_size = Vector2(16, 0)
layout_mode = 2
color = Color(0, 0, 0, 1)

[node name="Button" type="Button" parent="VolumeAdjust/AdjustmentContainer/Adjustment3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
theme = ExtResource("2_hjmjl")
theme_override_font_sizes/font_size = 24

[node name="Adjustment4" type="ColorRect" parent="VolumeAdjust/AdjustmentContainer"]
custom_minimum_size = Vector2(16, 0)
layout_mode = 2
color = Color(0, 0, 0, 1)

[node name="Button" type="Button" parent="VolumeAdjust/AdjustmentContainer/Adjustment4"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
theme = ExtResource("2_hjmjl")
theme_override_font_sizes/font_size = 24

[node name="Adjustment5" type="ColorRect" parent="VolumeAdjust/AdjustmentContainer"]
custom_minimum_size = Vector2(16, 0)
layout_mode = 2
color = Color(0, 0, 0, 1)

[node name="Button" type="Button" parent="VolumeAdjust/AdjustmentContainer/Adjustment5"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
theme = ExtResource("2_hjmjl")
theme_override_font_sizes/font_size = 24

[node name="BusContainer" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
theme_override_constants/separation = 8
alignment = 2

[node name="MusicButton" type="Button" parent="BusContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
focus_mode = 0
theme = SubResource("Theme_7571v")
theme_override_font_sizes/font_size = 24
icon = ExtResource("4_ngn5c")
expand_icon = true

[node name="Highlight" type="TextureRect" parent="BusContainer/MusicButton"]
visible = false
layout_mode = 0
offset_left = -5.0
offset_top = -5.0
offset_right = 37.0
offset_bottom = 37.0
texture = ExtResource("5_d0o1o")

[node name="SFXButton" type="Button" parent="BusContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
focus_mode = 0
theme = SubResource("Theme_7571v")
theme_override_font_sizes/font_size = 24
icon = ExtResource("6_grh3n")
expand_icon = true

[node name="Highlight" type="TextureRect" parent="BusContainer/SFXButton"]
visible = false
offset_left = -5.0
offset_top = -5.0
offset_right = 37.0
offset_bottom = 37.0
texture = ExtResource("5_d0o1o")

[node name="FullScreenButton" type="Button" parent="."]
custom_minimum_size = Vector2(134, 54)
layout_mode = 2
focus_mode = 0
theme = SubResource("Theme_7571v")
theme_override_font_sizes/font_size = 24
text = "Fullscreen
(F11)"
